--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<div class="col-md-6 col-lg-5 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/ubaid-img.png);">
+						<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/OIP-2.png);">
 						</div>
 					</div>
 				</div>
@@ -363,7 +363,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-app-development"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Web development</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>Our team builds responsive and modern websites to help your business grow.</p>
 						</div>
 					</div> 
 				</div>
@@ -372,7 +372,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-web-programming"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">ERS System Development</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>Our team builds ERS or Transaction related systems .</p>
 						</div>
 					</div> 
 				</div>
@@ -380,8 +380,8 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-branding"></span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3">Banner Design</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<h3 class="heading mb-3">Graphic Design</h3>
+							<p>We specialize in creating innovative designs for Bussiness & Brands.</p>
 						</div>
 					</div> 
 				</div>
@@ -390,7 +390,7 @@
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-app-development"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Flutter App Development</h3>
-							<p>A small river named Duden flows by their place and supplies.</p>
+							<p>We specialize in creating innovative and efficient mobile applications.</p>
 						</div>
 					</div> 
 				</div>
@@ -404,12 +404,12 @@
 				<div class="col-md-8 col-lg-8 d-flex align-items-center">
 					<div class="w-100 py-4">
 						<h2>Have a project on your mind.</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly.</p>
+						<p>Let’s bring your ideas to life with creativity, precision, and passion.</p>
 						<p class="mb-0"><a href="#" class="btn btn-outline-light py-3 px-4">Contact me</a></p>
 					</div>
 				</div>
-				<div class="col-md-4 col-lg-4 d-flex align-items-end">
-					<img src="images/ubaid-img.png" class="img-fluid" alt="">
+				<div class="col-md-2 col-lg-4 d-flex align-items-end">
+					<img src="images/OIP-7.png" class="img-fluid" alt="">
 				</div>
 			</div>
 		</div>
@@ -448,7 +448,7 @@
 					<div class="project img proj2 shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/proj5.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://apps.apple.com/pk/app/going-all-in/id6738837352">Ecommerce Flutter App</a></h3>
+							<h3><a href="https://apps.apple.com/pk/app/going-all-in/id6738837352">Going All In App</a></h3>
 							<span>Mobile App (Flutter & Shopify Api's)</span>
 						</div>
 					</div>
@@ -457,8 +457,8 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/c1.jpeg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="#">Construction Mart</a></h3>
+							<span>Mobile App (Flutter & Node.js)</span>
 						</div>
 					</div>
 				</div>
@@ -466,8 +466,8 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/c2.jpeg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="#">Construction Mart</a></h3>
+							<span>Mobile App (Flutter & Node.js)</span>
 						</div>
 					</div>
 				</div>
@@ -580,10 +580,9 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Services</h2>
 						<ul class="list-unstyled">
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Web Design</a></li>
 							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Web Development</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>App Development</a></li>
-							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Backend Development</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>ERS System Development</a></li>
+							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Flutter App Development</a></li>
 							<li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Graphic Design</a></li>
 						</ul>
 					</div>
@@ -599,9 +598,9 @@
 							</ul>
 						</div>
 						<ul class="ftco-footer-social list-unstyled mt-2">
-							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/share/16cLM7HKsW/?mibextid=wwXIfr"><span class="fa fa-facebook"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.linkedin.com/in/ubaid-ur-rehman-8607aa201"><span class="fa fa-linkedin"></span></a></li>
 						</ul>
 					</div>
 				</div>
